--- a/index.html
+++ b/index.html
@@ -16,22 +16,28 @@
   <title>Social links profile | Ontiveros Luis</title>
 </head>
 <body>
-  <section class="profile">
-    <header>
-      <img src="./assets/images/avatar-jessica.jpeg" alt="Avatar de Jessica">
-    </header>
-    <div class="description">
-      <h2>Jessica Randall</h2>
-      <p>London, United Kingdom</p>
-      <p>"Front-end developer and avid reader."</p>
-    </div>
-    <section class="button-section">
-      <button>Github</button>
-      <button>Frontend Mentor</button>
-      <button>LinkedIn</button>
-      <button>Twitter</button>
-      <button>Instagram</button>
-  </section>
-  </section>
+  <main>
+    <button>add profile</button>
+    <section class="profile">
+      <header>
+        <img src="./assets/images/avatar-jessica.jpeg" alt="Avatar de Jessica">
+      </header>
+      <div class="description">
+        <h2>Jessica Randall</h2>
+        <p>London, United Kingdom</p>
+        <p>"Front-end developer and avid reader."</p>
+      </div>
+      <section class="button-section">
+        <button>Github</button>
+        <button>Frontend Mentor</button>
+        <button>LinkedIn</button>
+        <button>Twitter</button>
+        <button>Instagram</button>
+    </section>
+    </section>
+  </main>
+  <script src="./index.js">
+
+  </script>
 </body>
 </html>
